<resources>
    <string name="app_name">oplayner</string>
    <string name="create_party">Créer</string>
    <string name="join_party">Rejoint</string>

    <string name="welcome">Bienvenue</string>
    <string name="welcome_text">Vous aussi vous avez connu les galères pour organiser une soirée ? Michel qui oublie les
        bières, Patrick qui rembourse jamais rien … Maintenant avec OPLAYNER tout le monde participe !
    </string>
    <string name="join_title">Rejoins tes amis</string>
    <string name="avatar_choice">Choisis ton avatar</string>
    <string name="go_party">Rejoindre</string>

    <string name="create_title">Information</string>

    <string name="link_title">Bravo ta soirée vient d\'être créée</string>
    <string name="link_continue">Poursuivre</string>
    <string name="link_share">Partager</string>


    <!--placeholder -->
    <string name="create_holder_title">Nom de ta soirée</string>
    <string name="create_holder_phone">N° de téléphone</string>
    <string name="create_holder_date">Date</string>
    <string name="create_holder_adresse">Ton adresse</string>
    <string name="create_holder_message">Un petit message pour la team ;)</string>
    <string name="create_holder_password">Mot de passe</string>

    <string name="join_holder_title">Nom de la soirée</string>
    <string name="join_holder_password">Mot de passe</string>
    <string name="join_holder_pseudo">Ton pseudo</string>

</resources>
