<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout">
    <ImageView
            android:layout_width="108dp"
            android:layout_height="34dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="13dp"/>
    <ImageView
            android:layout_width="372dp"
            android:layout_height="278dp" app:srcCompat="@drawable/ic_create_party"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="30dp" app:layout_constraintHorizontal_bias="0.478"/>
    <TextView
            android:text="@string/create_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_Title" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" android:textColor="@color/welcome"
            android:fontFamily="@font/source_sans_pro_extralight"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/create_Title">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical" android:id="@+id/linearLayout5">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/create_title" tools:layout_conversion_absoluteHeight="45dp"
                    tools:layout_editor_absoluteY="403dp" tools:layout_editor_absoluteX="0dp"
                    tools:layout_conversion_absoluteWidth="411dp" android:hint="@string/create_holder_title"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/create_password" android:hint="@string/create_holder_password"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/create_phone" tools:layout_conversion_absoluteHeight="45dp"
                    tools:layout_editor_absoluteY="448dp" tools:layout_editor_absoluteX="0dp"
                    tools:layout_conversion_absoluteWidth="411dp" android:hint="@string/create_holder_phone"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/create_date" android:hint="@string/create_holder_date"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/create_adress" android:hint="@string/create_holder_adresse"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/create_message" android:hint="@string/create_holder_message"/>
            <TextView
                    android:text="@string/avatar_choice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    android:textColor="@color/welcome"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="44dp">
            </androidx.recyclerview.widget.RecyclerView>
            <Button
                    android:text="@string/create_party"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/create_party"
                    android:background="@drawable/button" android:textColor="#FFFFFF"
                    android:fontFamily="@font/source_sans_pro_extralight"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>