<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout2">
    <ImageView
            android:layout_width="108dp"
            android:layout_height="34dp" app:srcCompat="@drawable/logo"
            android:id="@+id/logo" android:layout_marginTop="13dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="372dp"
            android:layout_height="265dp" app:srcCompat="@drawable/ic_join_img"
            android:id="@+id/join_img" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/logo"/>
    <TextView
            android:text="@string/join_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/party_id_name" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/join_img" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="@font/source_sans_pro_extralight" android:textColor="@color/welcome"
            android:textStyle="bold"/>
    <ScrollView
            android:layout_width="395dp"
            android:layout_height="311dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/party_id_name" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/party_id" android:hint="@string/join_holder_title"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/join_psw" android:hint="@string/join_holder_password"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/join_pseudo" android:hint="@string/join_holder_pseudo"/>
            <TextView
                    android:text="@string/avatar_choice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    android:textColor="@color/welcome" android:fontFamily="@font/source_sans_pro_extralight"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
            </androidx.recyclerview.widget.RecyclerView>
            <Button
                    android:text="@string/go_party"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/go_party"
                    android:background="@drawable/button" android:textColor="#FFFFFF"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>