<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".link">

    <ImageView
            android:layout_width="107dp"
            android:layout_height="34dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="372dp"
            android:layout_height="262dp" app:srcCompat="@drawable/ic_join"
            android:id="@+id/imageView4" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/link_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/welcome" android:textStyle="bold"
            android:fontFamily="@font/source_sans_pro_extralight"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Button
            android:text="@string/link_continue"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:id="@+id/persue" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/share" android:background="@drawable/button"/>
    <Button
            android:text="@string/link_share"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:id="@+id/share" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/persue"
            app:layout_constraintHorizontal_bias="0.5" android:background="@drawable/button"/>
</androidx.constraintlayout.widget.ConstraintLayout>